# dash

./: .gitignore  CLAUDE.md  README.md  cli.py  dev.sh  package.json  pnpm-lock.yaml  pyproject.toml
.claude/hooks/: secret-check.sh
dash_robot/: __init__.py  constants.py  robot.py  sensors.py
examples/: drive_square.py  lightshow.py  obstacle_avoid.py  react_to_clap.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  speech.d.ts
frontend/app/lib/: api.ts
server/: main.py
